--- a/counter/style.css
+++ b/counter/style.css
@@ -4,11 +4,11 @@ body {
   }
   
 div{
-    margin: 10px 0px;
+    /* margin: 5px 0px; */
 }
 
 span{
-    font-size: 72px;
+    font-size: 36px;
     margin: 32px 0;
     padding: 0px 40px;
     height: 100px;
@@ -31,14 +31,13 @@ span{
 
 button {
     height: 100px;
-    font-size: 36px;
     border-radius: 8px;
     background-color: #3498db;
     color: #fff;
     border: none;
     cursor: pointer;
-    font-size: 72px;
-    margin: 32px 0;
+    font-size: 36px;
+    /* margin: 32px 0; */
     height: 100px;
     display: inline-block;
     line-height: 100px;
